Fix category id
